--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>Guess The Number</h1>
+<html>
+<head>
+    <title>Guess the Number</title>
+</head>
+
+<body>
+    <h1>Guess The Number</h1>
+    <script>
+        let num = Math.floor(Math.random() * 11);
+        let gotIt = false;
+        let guess = prompt("Guess a number between 1 and 10");
+        let counter = 0;
+        /*
+        to increment counter, you can do this:
+        counter++;
+
+        or this:
+
+        counter +=
+
+        or this:
+
+        counter = counter + 1
+
+        */
+
+        while(gotIt == false){
+            if (num == guess) {
+                alert("You got it!");
+                gotIt = true;
+             }else{
+                guess = prompt("That was incorrect. Please guess again.");
+             }
+
+        }
+
+
+
+        alert(num);
+
+        //alert("Is this working?");
+    </script>
+</body>
+</html>
