--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <body>
     <h1>Guess The Number</h1>
     <script>
-        let num = Math.floor(Math.random() * 11);
+        //let num = Math.floor(Math.random() * 11) + 1; 
         let gotIt = false;
         let guess = prompt("Guess a number between 1 and 10");
         let counter = 0;
+        let feedback = "";
+        let times = "times";
         /*
         to increment counter, you can do this:
         counter++;
@@ -25,18 +27,31 @@
         */
 
         while(gotIt == false){
+            counter++;
             if (num == guess) {
-                alert("You got it!");
+                //alert("You got it!");
+                if(counter == 1) {
+                    times = "time"
+                }
+                feedback = `The correct number was ${num} and you guessed ${counter} ${times}!`;
+
+                alert(feedback);
                 gotIt = true;
+            }else if(num > guess){//higher
+                guess = prompt("That was too low. Please guess again.");
+            }else if(num < guess){//lower
+                guess = prompt("That was too high. Please guess again.");
+            
+
+
+
+
+
              }else{
-                guess = prompt("That was incorrect. Please guess again.");
+                alert('You should not see');
              }
 
         }
-
-
-
-        alert(num);
 
         //alert("Is this working?");
     </script>
