removes comment on line 9

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Guess The Number</h1>
     <script>
-        //let num = Math.floor(Math.random() * 11) + 1; 
+        let num = Math.floor(Math.random() * 11) + 1; 
         let gotIt = false;
         let guess = prompt("Guess a number between 1 and 10");
         let counter = 0;
